# primal-scourge-

./: .gitignore  .gitmodules  CMakeConfig.h.in  CMakeLists.txt  Character.h  README.md  primal-scourge-tool.sln  primal-scourge-tool.vcxproj  primal-scourge-tool.vcxproj.filters  simple-chat-application.sln  simple-chat-application.vcxproj  simple-chat-application.vcxproj.filters
assets/: resources.rc
src/: CONSTANTS.h  Channel.cpp  Channel.h  Character.cpp  Character.h  ChatDisplay.cpp  ChatDisplay.h  ChatWindow.cpp  ChatWindow.h  Client.cpp  Client.h  ClientWindow.cpp  ClientWindow.h  HUD.cpp  HUD.h  Message.cpp  Message.h  Pokemon.h  Server.cpp  Server.h  ServerPacket.cpp  ServerPacket.h  ServerUser.cpp  ServerUser.h  TextManager.cpp  TextManager.h  User.cpp  User.h  discord.cpp  discord.h  main.cpp  operators.cpp  operators.h  operators.hpp  pch.h
src/lang/: en_us.h  es.h  ja.h  lang.h
users/: 0.txt
